--- a/10-tables.Rmd
+++ b/10-tables.Rmd
@@ -71,7 +71,8 @@ slopes <- tcr_raw %>%
     entropy = -sum(log2(productive_frequency)*productive_frequency),
     len = n(), 
     clonality = 1- entropy/(log2(len))) %>% 
-  left_join(slopes))
+  left_join(slopes)) %>%
+  mutate (slope = abs(slope))
 
 # TODO double check out vs adaptive's entropy/clonality calculations 
 # TODO: report slope abs()
