--- a/02-prepare-TCR.Rmd
+++ b/02-prepare-TCR.Rmd
@@ -36,6 +36,13 @@ if(!file.exists(tcr_objects_path)){
     column_to_rownames("sample_name") %>% 
     data.matrix()
   
+  dt_tcr_w_bysample <- tcr_raw_filt %>% 
+    data.table::as.data.table() %>% 
+    data.table::dcast(rearrangement~sample_name, fill = 0, value.var="productive_frequency" ) %>%
+    column_to_rownames("rearrangement") %>% 
+    data.matrix()
+
+  
   tmp <- rep(1, n_distinct(tcr_raw_filt$sample_name))
   names(tmp) <- rownames(dt_tcr_w)
   all.equal(tmp, rowSums(dt_tcr_w))
@@ -273,7 +280,7 @@ if(!file.exists(tcr_objects_path)){
   # 
   
   
-  save(list = c( "tcr_sample_metadata", "tcr_corrs", "shared_clones", "clones_per_pt", "aa_per_pt", "tcr_raw"), file = tcr_objects_path  )
+  save(list = c( "tcr_sample_metadata", "dt_tcr_w_bysample", "tcr_corrs", "shared_clones", "clones_per_pt", "aa_per_pt", "tcr_raw"), file = tcr_objects_path  )
   
 } else{
   load(tcr_objects_path)
